--- a/database_cleanup/i18n/en.po
+++ b/database_cleanup/i18n/en.po
@@ -2,43 +2,46 @@
 # This file contains the translation of the following modules:
 # * database_cleanup
 #
-# Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0c\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-19 18:00+0000\n"
-"PO-Revision-Date: 2017-04-19 18:00+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Lithuanian (https://www.transifex.com/oca/teams/23907/lt/)\n"
-"Language: lt\n"
+"POT-Creation-Date: 2019-04-16 16:02+0000\n"
+"PO-Revision-Date: 2016-07-09 10:34+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
-"%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: \n"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_column__purge_line_ids
 msgid "Columns to purge"
-msgstr ""
+msgstr "Columns to purge"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.cleanup_create_indexes_line_action
 #: model_terms:ir.ui.view,arch_db:database_cleanup.cleanup_create_indexes_wizard_view_form
+#, fuzzy
+#| msgid "Created by"
 msgid "Create"
-msgstr ""
+msgstr "Created by"
 
 #. module: database_cleanup
 #: model_terms:ir.ui.view,arch_db:database_cleanup.cleanup_create_indexes_wizard_view_form
+#, fuzzy
+#| msgid "Created by"
 msgid "Create all"
-msgstr ""
+msgstr "Created by"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_create_indexes_wizard
+#, fuzzy
+#| msgid "Created on"
 msgid "Create indexes"
-msgstr ""
+msgstr "Created on"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.cleanup_create_indexes_wizard_action
@@ -48,13 +51,17 @@ msgstr ""
 
 #. module: database_cleanup
 #: model_terms:ir.ui.view,arch_db:database_cleanup.cleanup_create_indexes_line_view_tree
+#, fuzzy
+#| msgid "Purge this model"
 msgid "Create this index"
-msgstr ""
+msgstr "Purge this model"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__purged
+#, fuzzy
+#| msgid "Created by"
 msgid "Created"
-msgstr ""
+msgstr "Created by"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__create_uid
@@ -74,7 +81,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_property__create_uid
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_table__create_uid
 msgid "Created by"
-msgstr "Sukūrė"
+msgstr "Created by"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__create_date
@@ -94,22 +101,22 @@ msgstr "Sukūrė"
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_property__create_date
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_table__create_date
 msgid "Created on"
-msgstr "Sukurta"
+msgstr "Created on"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_data__data_id
 msgid "Data entry"
-msgstr ""
+msgstr "Data entry"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_data__purge_line_ids
 msgid "Data to purge"
-msgstr ""
+msgstr "Data to purge"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_database_cleanup
 msgid "Database cleanup"
-msgstr ""
+msgstr "Database cleanup"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__display_name
@@ -131,7 +138,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_property__display_name
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_table__display_name
 msgid "Display Name"
-msgstr "Vaizduojamas pavadinimas"
+msgstr "Display Name"
 
 #. module: database_cleanup
 #: selection:cleanup.purge.line.property,reason:0
@@ -195,7 +202,7 @@ msgstr "ID"
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_property____last_update
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_table____last_update
 msgid "Last Modified on"
-msgstr "Paskutinį kartą keista"
+msgstr "Last Modified on"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__write_uid
@@ -215,7 +222,7 @@ msgstr "Paskutinį kartą keista"
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_property__write_uid
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_table__write_uid
 msgid "Last Updated by"
-msgstr "Paskutinį kartą atnaujino"
+msgstr "Last Updated by"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__write_date
@@ -235,22 +242,22 @@ msgstr "Paskutinį kartą atnaujino"
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_property__write_date
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_table__write_date
 msgid "Last Updated on"
-msgstr "Paskutinį kartą atnaujinta"
+msgstr "Last Updated on"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_menu__menu_id
 msgid "Menu entry"
-msgstr ""
+msgstr "Menu entry"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_menu__purge_line_ids
 msgid "Menus to purge"
-msgstr ""
+msgstr "Menus to purge"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_column__model_id
 msgid "Model"
-msgstr ""
+msgstr "Model"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_ir_model_data
@@ -260,17 +267,17 @@ msgstr ""
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_ir_model
 msgid "Models"
-msgstr ""
+msgstr "Models"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_model__purge_line_ids
 msgid "Models to purge"
-msgstr ""
+msgstr "Models to purge"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_module__purge_line_ids
 msgid "Modules to purge"
-msgstr ""
+msgstr "Modules to purge"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__name
@@ -283,43 +290,43 @@ msgstr ""
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_property__name
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_table__name
 msgid "Name"
-msgstr "Pavadinimas"
+msgstr "Name"
 
 #. module: database_cleanup
 #: code:addons/database_cleanup/models/purge_menus.py:54
 #, python-format
 msgid "No dangling menu entries found"
-msgstr ""
+msgstr "No dangling menu entries found"
 
 #. module: database_cleanup
 #: code:addons/database_cleanup/models/purge_modules.py:83
 #, python-format
 msgid "No modules found to purge"
-msgstr ""
+msgstr "No modules found to purge"
 
 #. module: database_cleanup
 #: code:addons/database_cleanup/models/purge_columns.py:128
 #, python-format
 msgid "No orphaned columns found"
-msgstr ""
+msgstr "No orphaned columns found"
 
 #. module: database_cleanup
 #: code:addons/database_cleanup/models/purge_data.py:68
 #, python-format
 msgid "No orphaned data entries found"
-msgstr ""
+msgstr "No orphaned data entries found"
 
 #. module: database_cleanup
 #: code:addons/database_cleanup/models/purge_models.py:113
 #, python-format
 msgid "No orphaned models found"
-msgstr ""
+msgstr "No orphaned models found"
 
 #. module: database_cleanup
 #: code:addons/database_cleanup/models/purge_tables.py:107
 #, python-format
 msgid "No orphaned tables found"
-msgstr ""
+msgstr "No orphaned tables found"
 
 #. module: database_cleanup
 #: model_terms:ir.ui.view,arch_db:database_cleanup.form_purge_wizard
@@ -328,8 +335,10 @@ msgstr ""
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_property__purge_line_ids
+#, fuzzy
+#| msgid "Models to purge"
 msgid "Properties to purge"
-msgstr ""
+msgstr "Models to purge"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_property__property_id
@@ -346,7 +355,7 @@ msgstr ""
 #: model:ir.actions.server,name:database_cleanup.action_purge_table_line
 #: model_terms:ir.ui.view,arch_db:database_cleanup.form_purge_wizard
 msgid "Purge"
-msgstr ""
+msgstr "Purge"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_line
@@ -361,8 +370,10 @@ msgstr ""
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_wizard__purge_line_ids
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard__purge_line_ids
+#, fuzzy
+#| msgid "Purge menus"
 msgid "Purge Line"
-msgstr ""
+msgstr "Purge menus"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_column__wizard_id
@@ -373,34 +384,34 @@ msgstr ""
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_property__wizard_id
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_table__wizard_id
 msgid "Purge Wizard"
-msgstr ""
+msgstr "Purge Wizard"
 
 #. module: database_cleanup
 #: model_terms:ir.ui.view,arch_db:database_cleanup.form_purge_wizard
 msgid "Purge all"
-msgstr ""
+msgstr "Purge all"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.action_purge_columns
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard_column
 msgid "Purge columns"
-msgstr ""
+msgstr "Purge columns"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard_data
 msgid "Purge data"
-msgstr ""
+msgstr "Purge data"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.action_purge_data
 msgid "Purge data entries that refer to missing resources"
-msgstr ""
+msgstr "Purge data entries that refer to missing resources"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.action_purge_menus
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard_menu
 msgid "Purge menus"
-msgstr ""
+msgstr "Purge menus"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.action_purge_models
@@ -408,66 +419,70 @@ msgstr ""
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard_model
 #: model_terms:ir.ui.view,arch_db:database_cleanup.tree_purge_line
 msgid "Purge models"
-msgstr ""
+msgstr "Purge models"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.action_purge_modules
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard_module
 msgid "Purge modules"
-msgstr ""
+msgstr "Purge modules"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_purge_columns
 msgid "Purge obsolete columns"
-msgstr ""
+msgstr "Purge obsolete columns"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_purge_data
 msgid "Purge obsolete data entries"
-msgstr ""
+msgstr "Purge obsolete data entries"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_purge_menus
 msgid "Purge obsolete menu entries"
-msgstr ""
+msgstr "Purge obsolete menu entries"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_purge_models
 msgid "Purge obsolete models"
-msgstr ""
+msgstr "Purge obsolete models"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_purge_modules
 msgid "Purge obsolete modules"
-msgstr ""
+msgstr "Purge obsolete modules"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_purge_property
+#, fuzzy
+#| msgid "Purge obsolete models"
 msgid "Purge obsolete properties"
-msgstr ""
+msgstr "Purge obsolete properties"
 
 #. module: database_cleanup
 #: model:ir.ui.menu,name:database_cleanup.menu_purge_tables
 msgid "Purge obsolete tables"
-msgstr ""
+msgstr "Purge obsolete tables"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.action_purge_property
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_line_property
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard_property
+#, fuzzy
+#| msgid "Purge models"
 msgid "Purge properties"
-msgstr ""
+msgstr "Purge models"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard
 msgid "Purge stuff"
-msgstr ""
+msgstr "Purge stuff"
 
 #. module: database_cleanup
 #: model:ir.actions.server,name:database_cleanup.action_purge_tables
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_wizard_table
 msgid "Purge tables"
-msgstr ""
+msgstr "Purge tables"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_line_table
@@ -477,7 +492,7 @@ msgstr ""
 #. module: database_cleanup
 #: model_terms:ir.ui.view,arch_db:database_cleanup.tree_purge_line
 msgid "Purge this model"
-msgstr ""
+msgstr "Purge this model"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line__purged
@@ -489,12 +504,12 @@ msgstr ""
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_property__purged
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_table__purged
 msgid "Purged"
-msgstr ""
+msgstr "Purged"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line_property__reason
 msgid "Reason"
-msgstr "Priežastis"
+msgstr ""
 
 #. module: database_cleanup
 #: selection:cleanup.purge.line.property,reason:0
@@ -504,18 +519,18 @@ msgstr ""
 #. module: database_cleanup
 #: model_terms:ir.ui.view,arch_db:database_cleanup.form_purge_wizard
 msgid "Select lines"
-msgstr ""
+msgstr "Select lines"
 
 #. module: database_cleanup
 #: code:addons/database_cleanup/models/purge_wizard.py:75
 #, python-format
 msgid "Select lines to purge"
-msgstr ""
+msgstr "Select lines to purge"
 
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_wizard_table__purge_line_ids
 msgid "Tables to purge"
-msgstr ""
+msgstr "Tables to purge"
 
 #. module: database_cleanup
 #: selection:cleanup.purge.line.property,reason:0
@@ -525,25 +540,29 @@ msgstr ""
 #. module: database_cleanup
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_create_indexes_line__wizard_id
 #: model:ir.model.fields,field_description:database_cleanup.field_cleanup_purge_line__wizard_id
+#, fuzzy
+#| msgid "Purge Wizard"
 msgid "Wizard"
-msgstr ""
+msgstr "Purge Wizard"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_create_indexes_line
+#, fuzzy
+#| msgid "cleanup.purge.line.module"
 msgid "cleanup.create_indexes.line"
-msgstr ""
+msgstr "cleanup.purge.line.module"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_line_data
 msgid "cleanup.purge.line.data"
-msgstr ""
+msgstr "cleanup.purge.line.data"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_line_menu
 msgid "cleanup.purge.line.menu"
-msgstr ""
+msgstr "cleanup.purge.line.menu"
 
 #. module: database_cleanup
 #: model:ir.model,name:database_cleanup.model_cleanup_purge_line_module
 msgid "cleanup.purge.line.module"
-msgstr ""
+msgstr "cleanup.purge.line.module"
